--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         </div>
         <div id="Linkedin">
           <a href="https://www.linkedin.com/in/anirudh-nayak-195713324/" style="text-decoration: none;">
-               <img src="/images/icons8-linkedin-50 (1).png" alt="linkedinLogo" >
+               <img src="images/icons8-linkedin-48.png" alt="linkedinLogo" >
               
           </a> <span style="position: relative; top: -15px;"> LinkedIn</span>
         </div>
